--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "EngineHub Static Website",
+  "name": "enginehub-static-website",
   "private": true,
   "description": "Main EngineHub website, enginehub.org",
   "version": "1.0.0",
   "author": "EngineHub",
   "dependencies": {
     "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.11",
     "gatsby": "^2.4.3",
     "gatsby-image": "^2.0.41",
-    "gatsby-plugin-google-analytics": "^2.0.19",
+    "gatsby-plugin-gtag": "^1.0.10",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
