Finished WorldEdit page

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-github-btn": "^1.0.5",
     "react-helmet": "^5.2.1",
+    "smooth-scroll": "^16.0.3",
     "typescript": "^3.4.5"
   },
   "devDependencies": {
