--- a/package.json
+++ b/package.json
@@ -1,60 +1,8 @@
 {
-  "name": "enginehub-static-website",
+  "name": "enginehub-websites",
   "private": true,
-  "description": "Main EngineHub website, enginehub.org",
-  "version": "1.0.0",
-  "author": "EngineHub",
-  "dependencies": {
-    "@emotion/core": "^10.0.14",
-    "@emotion/styled": "^10.0.14",
-    "gatsby": "^2.11.0",
-    "gatsby-image": "^2.2.3",
-    "gatsby-plugin-gtag": "^1.0.11",
-    "gatsby-plugin-manifest": "^2.2.0",
-    "gatsby-plugin-offline": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
-    "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-plugin-sitemap": "^2.2.0",
-    "gatsby-plugin-typescript": "^2.1.0",
-    "gatsby-source-filesystem": "^2.1.1",
-    "gatsby-transformer-sharp": "^2.2.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-github-btn": "^1.0.5",
-    "react-helmet": "^5.2.1",
-    "smooth-scroll": "^16.1.0",
-    "typescript": "^3.5.2"
-  },
-  "devDependencies": {
-    "@types/react": "^16.8.22",
-    "@types/react-helmet": "^5.0.8",
-    "lint-staged": "^8.2.1",
-    "prettier": "^1.18.2",
-    "tslint": "^5.18.0",
-    "tslint-react": "^4.0.0",
-    "tslint-sonarts": "^1.9.0"
-  },
-  "keywords": [
-    "gatsby",
-    "enginehub",
-    "worldedit",
-    "worldguard",
-    "craftbook"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/EngineHub/enginehub-website"
-  }
+  "workspaces": [
+    "main-site",
+    "workspace-b"
+  ]
 }
