TS now works with multiple projects - start the separation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@shared": ["shared/src/*"],
-            "@builds": ["builds/src/*"],
-            "@main": ["main-site/src/*"]
+            "@shared/*": ["shared/src/*"],
+            "@builds/*": ["builds/src/*"],
+            "@main/*": ["main-site/src/*"]
         },
         "allowJs": true,
         "forceConsistentCasingInFileNames": true,
