--- a/main-site/tsconfig.json
+++ b/main-site/tsconfig.json
@@ -13,6 +13,6 @@
         "noEmit": true,
         "skipLibCheck": true
     },
-    "include": ["./src/**/*"],
+    "include": ["./src/**/*", "../shared/src/components/jumbotron.component.tsx", "../shared/src/components/label.component.tsx", "../shared/src/components/section-heading.component.tsx", "../shared/src/components/subtle-text.component.tsx", "../shared/src/components/container.component.tsx"],
     "exclude": [".cache", "public"]
 }
