--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "workspaces": [
         "main-site",
         "builds",
+        "paste",
         "shared"
     ],
     "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/EngineHub/enginehub-website"
+    },
+    "dependencies": {
+        "patch-package": "^6.1.2",
+        "postinstall-postinstall": "^2.0.0"
+    },
+    "scripts": {
+        "postinstall": "patch-package"
     }
 }
