--- a/builds/package.json
+++ b/builds/package.json
@@ -8,7 +8,7 @@
         "next": "^9.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "serverless-nextjs-plugin": "2.0.3-alpha.0"
+        "serverless-nextjs-plugin": "2.3.0"
     },
     "devDependencies": {},
     "keywords": [
