--- a/paste/package.json
+++ b/paste/package.json
@@ -9,12 +9,13 @@
         "next-aws-lambda": "^2.0.5-alpha.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "serverless-nextjs-plugin": "2.0.3-alpha.0"
+        "serverless-nextjs-plugin": "2.3.0"
     },
     "devDependencies": {
         "@types/node": "^12.6.2",
         "@types/react": "^16.8.23",
-        "@types/react-dom": "^16.8.4"
+        "@types/react-dom": "^16.8.4",
+        "serverless-offline": "^5.7.3"
     },
     "keywords": [
         "pastebin",
