--- a/paste/package.json
+++ b/paste/package.json
@@ -9,6 +9,7 @@
         "next-aws-lambda": "^2.0.5-alpha.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-pace": "^1.0.0",
         "serverless-nextjs-plugin": "2.3.0"
     },
     "devDependencies": {
