--- a/paste/package.json
+++ b/paste/package.json
@@ -5,12 +5,12 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "next": "^9.0.1",
-        "next-aws-lambda": "^2.0.5-alpha.0",
+        "next": "^9.0.3",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-pace": "^1.0.0",
-        "serverless-nextjs-plugin": "2.3.0"
+        "react-helmet": "^5.2.1",
+        "serverless-nextjs-plugin": "2.3.0",
+        "tsconfig-paths-webpack-plugin": "^3.2.0"
     },
     "devDependencies": {
         "@types/node": "^12.6.2",
