Push further work towards builds and paste

--- a/paste/tsconfig.json
+++ b/paste/tsconfig.json
@@ -22,7 +22,7 @@
   },
   "include": [
     "pages/**/*",
-    "src/**/*"
+    "src/**/*", "../shared/src/utils/gtag.ts"
   ],
   "files": ["typings.d.ts"]
 }
