--- a/builds/package.json
+++ b/builds/package.json
@@ -5,12 +5,23 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "next": "^9.0.0",
+        "@zeit/next-css": "^1.0.1",
+        "babel-loader": "^8.0.6",
+        "babel-preset-react-app": "^9.0.1",
+        "next": "^9.0.4",
+        "next-images": "^1.1.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "serverless-nextjs-plugin": "2.3.0"
+        "react-helmet": "^5.2.1",
+        "serverless-nextjs-plugin": "^2.3.2",
+        "tsconfig-paths-webpack-plugin": "^3.2.0"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@types/node": "^12.7.2",
+        "@types/react": "^16.9.2",
+        "@types/react-dom": "^16.9.0",
+        "serverless-offline": "^5.10.1"
+    },
     "keywords": [
         "nextjs",
         "enginehub",
