--- a/paste/package.json
+++ b/paste/package.json
@@ -5,11 +5,14 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "next": "^9.0.3",
+        "@zeit/next-css": "^1.0.1",
+        "babel-loader": "^8.0.6",
+        "babel-preset-react-app": "^9.0.1",
+        "next": "^9.0.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
-        "serverless-nextjs-plugin": "2.3.0",
+        "serverless-nextjs-plugin": "^2.3.2",
         "tsconfig-paths-webpack-plugin": "^3.2.0"
     },
     "devDependencies": {
