--- a/main-site/package.json
+++ b/main-site/package.json
@@ -5,25 +5,25 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.0.14",
-        "@emotion/styled": "^10.0.14",
-        "gatsby": "^2.11.0",
-        "gatsby-image": "^2.2.3",
-        "gatsby-plugin-google-gtag": "^1.1.1",
-        "gatsby-plugin-manifest": "^2.2.0",
-        "gatsby-plugin-offline": "^2.2.0",
-        "gatsby-plugin-react-helmet": "^3.1.0",
+        "@emotion/core": "^10.0.16",
+        "@emotion/styled": "^10.0.15",
+        "gatsby": "^2.13.76",
+        "gatsby-image": "^2.2.12",
+        "gatsby-plugin-google-gtag": "^1.1.5",
+        "gatsby-plugin-manifest": "^2.2.8",
+        "gatsby-plugin-offline": "^2.2.9",
+        "gatsby-plugin-react-helmet": "^3.1.4",
         "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
         "gatsby-plugin-robots-txt": "^1.4.0",
-        "gatsby-plugin-sharp": "^2.2.1",
-        "gatsby-plugin-sitemap": "^2.2.0",
-        "gatsby-plugin-typescript": "^2.1.0",
-        "gatsby-source-filesystem": "^2.1.1",
-        "gatsby-transformer-sharp": "^2.2.0",
+        "gatsby-plugin-sharp": "^2.2.16",
+        "gatsby-plugin-sitemap": "^2.2.8",
+        "gatsby-plugin-typescript": "^2.1.4",
+        "gatsby-source-filesystem": "^2.1.14",
+        "gatsby-transformer-sharp": "^2.2.10",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-github-btn": "^1.0.5",
+        "react-github-btn": "^1.0.6",
         "react-helmet": "^5.2.1",
         "smooth-scroll": "^16.1.0",
         "tsconfig": "^7.0.0",
@@ -32,15 +32,21 @@
         "typescript": "^3.5.2"
     },
     "devDependencies": {
-        "@types/react": "^16.8.22",
-        "@types/react-helmet": "^5.0.8",
-        "lint-staged": "^8.2.1",
+        "@types/react": "^16.9.2",
+        "@types/react-helmet": "^5.0.9",
+        "lint-staged": "^9.2.3",
         "prettier": "^1.18.2",
-        "tslint": "^5.18.0",
+        "tslint": "^5.19.0",
         "tslint-react": "^4.0.0",
         "tslint-sonarts": "^1.9.0"
     },
-    "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
+    "keywords": [
+        "gatsby",
+        "enginehub",
+        "worldedit",
+        "worldguard",
+        "craftbook"
+    ],
     "scripts": {
         "build": "gatsby build",
         "develop": "gatsby develop",
