--- a/paste/package.json
+++ b/paste/package.json
@@ -5,6 +5,8 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
+        "@emotion/core": "^10.0.16",
+        "@emotion/styled": "^10.0.15",
         "@zeit/next-css": "^1.0.1",
         "babel-loader": "^8.0.6",
         "babel-preset-react-app": "^9.0.1",
@@ -16,10 +18,10 @@
         "tsconfig-paths-webpack-plugin": "^3.2.0"
     },
     "devDependencies": {
-        "@types/node": "^12.6.2",
-        "@types/react": "^16.8.23",
-        "@types/react-dom": "^16.8.4",
-        "serverless-offline": "^5.7.3"
+        "@types/node": "^12.7.2",
+        "@types/react": "^16.9.2",
+        "@types/react-dom": "^16.9.0",
+        "serverless-offline": "^5.10.1"
     },
     "keywords": [
         "pastebin",
