--- a/paste/package.json
+++ b/paste/package.json
@@ -8,19 +8,22 @@
         "@emotion/core": "^10.0.16",
         "@emotion/styled": "^10.0.15",
         "@zeit/next-css": "^1.0.1",
+        "aws-sdk": "^2.518.0",
         "babel-loader": "^8.0.6",
         "babel-preset-react-app": "^9.0.1",
         "next": "^9.0.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
-        "serverless-nextjs-plugin": "^2.3.2",
+        "serverless-nextjs-plugin": "^2.3.3",
+        "shortid": "^2.2.14",
         "tsconfig-paths-webpack-plugin": "^3.2.0"
     },
     "devDependencies": {
         "@types/node": "^12.7.2",
         "@types/react": "^16.9.2",
         "@types/react-dom": "^16.9.0",
+        "@types/shortid": "^0.0.29",
         "serverless-offline": "^5.10.1"
     },
     "keywords": [
