--- a/builds/package.json
+++ b/builds/package.json
@@ -5,12 +5,16 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.0.16",
-        "@emotion/styled": "^10.0.15",
+        "@emotion/core": "^10.0.17",
+        "@emotion/styled": "^10.0.17",
+        "@fortawesome/fontawesome-svg-core": "^1.2.22",
+        "@fortawesome/free-solid-svg-icons": "^5.10.2",
+        "@fortawesome/react-fontawesome": "^0.1.4",
         "@zeit/next-css": "^1.0.1",
+        "axios": "^0.19.0",
         "babel-loader": "^8.0.6",
         "babel-preset-react-app": "^9.0.1",
-        "next": "^9.0.4",
+        "next": "^9.0.5",
         "next-images": "^1.1.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
