chore: cleanup the shared component library

--- a/main-site/tsconfig.json
+++ b/main-site/tsconfig.json
@@ -13,6 +13,6 @@
         "noEmit": true,
         "skipLibCheck": true
     },
-    "include": ["./src/**/*", "../shared/src/components/navbar.tsx", "../shared/src/components/footer.tsx"],
+    "include": ["./src/**/*"],
     "exclude": [".cache", "public"]
 }
