--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "strictNullChecks": true,
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
-        "resolveJsonModule": true,
+        "resolveJsonModule": true
     },
     "exclude": ["node_modules"],
     "include": [
