--- a/builds/package.json
+++ b/builds/package.json
@@ -12,23 +12,23 @@
         "@fortawesome/react-fontawesome": "^0.1.4",
         "@zeit/next-css": "^1.0.1",
         "axios": "^0.19.0",
-        "babel-loader": "^8.0.6",
-        "babel-preset-react-app": "^9.0.1",
-        "cross-env": "^5.2.1",
         "moment": "^2.24.0",
         "next": "^9.0.5",
         "next-images": "^1.1.2",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-helmet": "^5.2.1",
-        "serverless-nextjs-plugin": "^2.3.7",
-        "tsconfig-paths-webpack-plugin": "^3.2.0"
+        "react": "16.8.6",
+        "react-dom": "16.8.6",
+        "react-helmet": "^5.2.1"
     },
     "devDependencies": {
         "@types/node": "^12.7.5",
         "@types/react": "^16.9.2",
         "@types/react-dom": "^16.9.0",
-        "serverless-offline": "^5.10.1"
+        "babel-loader": "^8.0.6",
+        "babel-preset-react-app": "^9.0.1",
+        "cross-env": "^5.2.1",
+        "serverless-nextjs-plugin": "^2.3.7",
+        "serverless-offline": "^5.10.1",
+        "tsconfig-paths-webpack-plugin": "^3.2.0"
     },
     "keywords": [
         "nextjs",
