--- a/main-site/package.json
+++ b/main-site/package.json
@@ -21,8 +21,8 @@
         "gatsby-source-filesystem": "^2.1.22",
         "gatsby-transformer-sharp": "^2.2.14",
         "prop-types": "^15.7.2",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "react": "16.8.6",
+        "react-dom": "16.8.6",
         "react-github-btn": "^1.0.6",
         "react-helmet": "^5.2.1",
         "smooth-scroll": "^16.1.0",
