--- a/paste/package.json
+++ b/paste/package.json
@@ -9,22 +9,23 @@
         "@emotion/styled": "^10.0.17",
         "@zeit/next-css": "^1.0.1",
         "aws-sdk": "^2.526.0",
-        "babel-loader": "^8.0.6",
-        "babel-preset-react-app": "^9.0.1",
         "next": "^9.0.5",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "react": "16.8.6",
+        "react-dom": "16.8.6",
         "react-helmet": "^5.2.1",
-        "serverless-nextjs-plugin": "^2.3.7",
-        "shortid": "^2.2.15",
-        "tsconfig-paths-webpack-plugin": "^3.2.0"
+        "shortid": "^2.2.15"
     },
     "devDependencies": {
         "@types/node": "^12.7.5",
         "@types/react": "^16.9.2",
         "@types/react-dom": "^16.9.0",
         "@types/shortid": "^0.0.29",
-        "serverless-offline": "^5.10.1"
+        "babel-loader": "^8.0.6",
+        "babel-preset-react-app": "^9.0.1",
+        "cross-env": "^5.2.1",
+        "serverless-nextjs-plugin": "^2.3.7",
+        "serverless-offline": "^5.10.1",
+        "tsconfig-paths-webpack-plugin": "^3.2.0"
     },
     "keywords": [
         "pastebin",
@@ -36,6 +37,7 @@
     "scripts": {
         "dev": "next",
         "build": "next build",
+        "deploy": "cross-env NODE_ENV=production sls deploy -v",
         "start": "next start",
         "type-check": "tsc --project ./tsconfig.json --noEmit",
         "lint": "tslint --config ./tslint.json --project ./tsconfig.json",
