--- a/shared/package.json
+++ b/shared/package.json
@@ -7,8 +7,8 @@
     "dependencies": {
         "@emotion/core": "^10.0.17",
         "@emotion/styled": "^10.0.17",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "react": "16.8.6",
+        "react-dom": "16.8.6",
         "tsconfig": "^7.0.0",
         "tsconfig-paths": "^3.8.0",
         "tsconfig-paths-webpack-plugin": "^3.2.0",
