--- a/paste/serverless.yml
+++ b/paste/serverless.yml
@@ -17,7 +17,6 @@ package:
 
 custom:
   serverless-nextjs:
-    customHandler: ./handler.js
     assetsBucketName: "paste-static.enginehub.org"
     routes:
       - src: api/paste
@@ -30,3 +29,7 @@ custom:
               id: true
       - src: _error
         path: "404"
+  webpack:
+    includeModules:
+      forceExclude:
+        - aws-sdk
