chore: fixed builds only working with root of subdirectories

--- a/.github/workflows/builds_deployer.yml
+++ b/.github/workflows/builds_deployer.yml
@@ -5,7 +5,11 @@ on:
     branches:    
       - master
     paths:
-      - 'builds/**'
+      - 'builds/*'
+      - 'builds/*/*'
+      - 'builds/*/*/*'
+      - 'builds/*/*/*/*'
+      - 'builds/*/*/*/*/*'
 jobs:
   build:
     runs-on: ubuntu-latest
