--- a/golf/package.json
+++ b/golf/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/react-fontawesome": "^0.1.4",
         "@types/gzip-js": "^0.3.1",
         "aws-sdk": "^2.521.0",
+        "axios": "^0.19.0",
         "babel-loader": "^8.0.6",
         "bcrypt": "^3.0.6",
         "got": "^9.6.0",
