feat: use the schematicwebviewer package

--- a/golf/package.json
+++ b/golf/package.json
@@ -8,11 +8,12 @@
         "@babel/core": "^7.5.5",
         "@emotion/core": "^10.0.17",
         "@emotion/styled": "^10.0.17",
-        "@fortawesome/fontawesome-svg-core": "^1.2.22",
-        "@fortawesome/free-solid-svg-icons": "^5.10.2",
+        "@enginehub/schematicwebviewer": "^1.0.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.24",
+        "@fortawesome/free-solid-svg-icons": "^5.11.1",
         "@fortawesome/react-fontawesome": "^0.1.4",
         "@types/gzip-js": "^0.3.1",
-        "aws-sdk": "^2.521.0",
+        "aws-sdk": "^2.533.0",
         "axios": "^0.19.0",
         "babel-loader": "^8.0.6",
         "bcrypt": "^3.0.6",
@@ -20,14 +21,14 @@
         "gzip-js": "^0.3.2",
         "jsonwebtoken": "^8.5.1",
         "nbt-ts": "^1.2.3",
-        "next": "9.0.5",
+        "next": "^9.0.6",
         "polished": "^3.4.1",
         "react": "16.8.6",
         "react-dom": "16.8.6",
         "react-helmet": "^5.2.1",
         "safe-compare": "^1.1.4",
-        "serverless-nextjs-plugin": "^2.3.4",
-        "serverless-offline": "^5.10.1",
+        "serverless-nextjs-plugin": "^2.3.8",
+        "serverless-offline": "^5.11.0",
         "shortid": "^2.2.14",
         "three": "^0.108.0",
         "zlibt": "0.0.5"
