--- a/paste/package.json
+++ b/paste/package.json
@@ -8,6 +8,7 @@
         "@emotion/core": "^10.0.17",
         "@emotion/styled": "^10.0.17",
         "@zeit/next-css": "^1.0.1",
+        "axios": "^0.19.0",
         "next": "^9.0.5",
         "react": "16.8.6",
         "react-dom": "16.8.6",
