--- a/golf/package.json
+++ b/golf/package.json
@@ -1,34 +1,51 @@
 {
-    "name": "builds",
+    "name": "worldedit-golf",
     "private": true,
     "description": "EngineHub builds site, builds.enginehub.org",
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
+        "@babel/core": "^7.6.2",
         "@emotion/core": "^10.0.17",
         "@emotion/styled": "^10.0.17",
+        "@enginehub/schematicwebviewer": "^1.1.1",
         "@fortawesome/fontawesome-svg-core": "^1.2.25",
         "@fortawesome/free-solid-svg-icons": "^5.11.2",
         "@fortawesome/react-fontawesome": "^0.1.4",
-        "@zeit/next-css": "^1.0.1",
+        "@types/gzip-js": "^0.3.1",
+        "aws-sdk": "^2.534.0",
         "axios": "^0.19.0",
-        "moment": "^2.24.0",
+        "babel-loader": "^8.0.6",
+        "bcrypt": "^3.0.6",
+        "got": "^9.6.0",
+        "gzip-js": "^0.3.2",
+        "jsonwebtoken": "^8.5.1",
+        "nbt-ts": "^1.2.3",
         "next": "^9.0.6",
-        "next-images": "^1.2.0",
+        "polished": "^3.4.1",
         "react": "16.8.6",
         "react-dom": "16.8.6",
-        "react-helmet": "^5.2.1"
+        "react-helmet": "^5.2.1",
+        "safe-compare": "^1.1.4",
+        "serverless-nextjs-plugin": "^2.3.8",
+        "serverless-offline": "^5.11.0",
+        "shortid": "^2.2.14",
+        "three": "^0.108.0",
+        "zlibt": "0.0.5"
     },
     "devDependencies": {
-        "@types/node": "^12.7.5",
+        "@types/got": "^9.6.7",
+        "@types/jsonwebtoken": "^8.3.4",
+        "@types/node": "^12.7.3",
         "@types/react": "^16.9.2",
         "@types/react-dom": "^16.9.0",
-        "babel-loader": "^8.0.6",
-        "babel-preset-react-app": "^9.0.1",
-        "cross-env": "^5.2.1",
-        "serverless-nextjs-plugin": "^2.3.7",
-        "serverless-offline": "^5.10.1",
-        "tsconfig-paths-webpack-plugin": "^3.2.0"
+        "@types/safe-compare": "^1.1.0",
+        "@types/shortid": "^0.0.29",
+        "cross-env": "^6.0.0",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
+        "tslint": "^5.19.0",
+        "tslint-react": "^4.1.0",
+        "typescript": "^3.6.2"
     },
     "keywords": [
         "nextjs",
