--- a/main-site/package.json
+++ b/main-site/package.json
@@ -7,38 +7,38 @@
     "dependencies": {
         "@emotion/core": "^10.0.17",
         "@emotion/styled": "^10.0.17",
-        "gatsby": "^2.15.14",
-        "gatsby-image": "^2.2.18",
-        "gatsby-plugin-google-gtag": "^1.1.8",
-        "gatsby-plugin-manifest": "^2.2.16",
-        "gatsby-plugin-offline": "^3.0.6",
-        "gatsby-plugin-react-helmet": "^3.1.7",
-        "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
-        "gatsby-plugin-robots-txt": "^1.4.0",
-        "gatsby-plugin-sharp": "^2.2.21",
-        "gatsby-plugin-sitemap": "^2.2.12",
-        "gatsby-plugin-typescript": "^2.1.7",
-        "gatsby-source-filesystem": "^2.1.22",
-        "gatsby-transformer-sharp": "^2.2.14",
+        "gatsby": "^2.15.24",
+        "gatsby-image": "^2.2.21",
         "prop-types": "^15.7.2",
-        "react": "16.8.6",
-        "react-dom": "16.8.6",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
         "react-github-btn": "^1.0.6",
         "react-helmet": "^5.2.1",
-        "smooth-scroll": "^16.1.0",
-        "tsconfig": "^7.0.0",
-        "tsconfig-paths": "^3.8.0",
-        "tsconfig-paths-webpack-plugin": "^3.2.0",
-        "typescript": "^3.6.3"
+        "smooth-scroll": "^16.1.0"
     },
     "devDependencies": {
-        "@types/react": "^16.9.2",
+        "@types/react": "^16.9.3",
         "@types/react-helmet": "^5.0.10",
-        "lint-staged": "^9.2.5",
+        "gatsby-plugin-google-gtag": "^1.1.9",
+        "gatsby-plugin-manifest": "^2.2.18",
+        "gatsby-plugin-offline": "^3.0.9",
+        "gatsby-plugin-react-helmet": "^3.1.8",
+        "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
+        "gatsby-plugin-robots-txt": "^1.4.0",
+        "gatsby-plugin-sharp": "^2.2.25",
+        "gatsby-plugin-sitemap": "^2.2.14",
+        "gatsby-plugin-typescript": "^2.1.9",
+        "gatsby-source-filesystem": "^2.1.26",
+        "gatsby-transformer-sharp": "^2.2.17",
+        "lint-staged": "^9.3.0",
         "prettier": "^1.18.2",
+        "tsconfig": "^7.0.0",
+        "tsconfig-paths": "^3.9.0",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
         "tslint": "^5.20.0",
-        "tslint-react": "^4.0.0",
-        "tslint-sonarts": "^1.9.0"
+        "tslint-react": "^4.1.0",
+        "tslint-sonarts": "^1.9.0",
+        "typescript": "^3.6.3"
     },
     "keywords": [
         "gatsby",
