--- a/.github/workflows/golf_deployer.yml
+++ b/.github/workflows/golf_deployer.yml
@@ -24,8 +24,8 @@ jobs:
       run: |
         npm install -g yarn serverless
         yarn
-        yarn workspace golf type-check
-        yarn workspace golf deploy
+        yarn workspace worldedit-golf type-check
+        yarn workspace worldedit-golf deploy
       env:
         CI: true
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
