--- a/paste/package.json
+++ b/paste/package.json
@@ -9,23 +9,23 @@
         "@emotion/styled": "^10.0.17",
         "@zeit/next-css": "^1.0.1",
         "axios": "^0.19.0",
-        "next": "^9.0.5",
-        "react": "16.8.6",
-        "react-dom": "16.8.6",
+        "next": "^9.0.6",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
         "react-helmet": "^5.2.1",
         "shortid": "^2.2.15"
     },
     "devDependencies": {
-        "@types/node": "^12.7.5",
-        "@types/react": "^16.9.2",
-        "@types/react-dom": "^16.9.0",
+        "@types/node": "^12.7.7",
+        "@types/react": "^16.9.3",
+        "@types/react-dom": "^16.9.1",
         "@types/shortid": "^0.0.29",
-        "aws-sdk": "^2.527.0",
+        "aws-sdk": "^2.535.0",
         "babel-loader": "^8.0.6",
-        "babel-preset-react-app": "^9.0.1",
-        "cross-env": "^5.2.1",
-        "serverless-nextjs-plugin": "^2.3.7",
-        "serverless-offline": "^5.10.1",
+        "babel-preset-react-app": "^9.0.2",
+        "cross-env": "^6.0.0",
+        "serverless-nextjs-plugin": "^2.3.8",
+        "serverless-offline": "^5.11.0",
         "tsconfig-paths-webpack-plugin": "^3.2.0"
     },
     "keywords": [
