--- a/shared/package.json
+++ b/shared/package.json
@@ -7,23 +7,23 @@
     "dependencies": {
         "@emotion/core": "^10.0.17",
         "@emotion/styled": "^10.0.17",
-        "react": "16.8.6",
-        "react-dom": "16.8.6",
-        "tsconfig": "^7.0.0",
-        "tsconfig-paths": "^3.8.0",
-        "tsconfig-paths-webpack-plugin": "^3.2.0",
-        "typescript": "^3.6.3"
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.0",
-        "@types/node": "^12.7.5",
-        "@types/react": "^16.9.2",
-        "@types/react-dom": "^16.9.0",
+        "@babel/core": "^7.6.2",
+        "@types/node": "^12.7.7",
+        "@types/react": "^16.9.3",
+        "@types/react-dom": "^16.9.1",
         "babel-loader": "^8.0.6",
-        "lint-staged": "^9.2.5",
+        "lint-staged": "^9.3.0",
+        "tsconfig": "^7.0.0",
+        "tsconfig-paths": "^3.9.0",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
         "tslint": "^5.20.0",
-        "tslint-react": "^4.0.0",
-        "tslint-sonarts": "^1.9.0"
+        "tslint-react": "^4.1.0",
+        "tslint-sonarts": "^1.9.0",
+        "typescript": "^3.6.3"
     },
     "lint-staged": {
         "./**/*.{ts,tsx}": [
