--- a/builds/package.json
+++ b/builds/package.json
@@ -15,6 +15,7 @@
         "moment": "^2.24.0",
         "next": "^9.0.6",
         "next-images": "^1.2.0",
+        "next-server": "^9.0.5",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-helmet": "^5.2.1"
