--- a/golf/package.json
+++ b/golf/package.json
@@ -18,6 +18,7 @@
         "jsonwebtoken": "^8.5.1",
         "nbt-ts": "^1.2.3",
         "next": "^9.0.6",
+        "next-server": "^9.0.5",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-helmet": "^5.2.1",
