--- a/paste/package.json
+++ b/paste/package.json
@@ -10,6 +10,7 @@
         "@zeit/next-css": "^1.0.1",
         "axios": "^0.19.0",
         "next": "^9.0.6",
+        "next-server": "^9.0.5",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-helmet": "^5.2.1",
