--- a/.github/workflows/builds_deployer.yml
+++ b/.github/workflows/builds_deployer.yml
@@ -10,6 +10,11 @@ on:
       - 'builds/*/*/*'
       - 'builds/*/*/*/*'
       - 'builds/*/*/*/*/*'
+      - 'shared/*'
+      - 'shared/*/*'
+      - 'shared/*/*/*'
+      - 'shared/*/*/*/*'
+      - 'shared/*/*/*/*/*'
 jobs:
   build:
     runs-on: ubuntu-latest
