--- a/.github/workflows/golf_deployer.yml
+++ b/.github/workflows/golf_deployer.yml
@@ -10,6 +10,11 @@ on:
       - 'golf/*/*/*'
       - 'golf/*/*/*/*'
       - 'golf/*/*/*/*/*'
+      - 'shared/*'
+      - 'shared/*/*'
+      - 'shared/*/*/*'
+      - 'shared/*/*/*/*'
+      - 'shared/*/*/*/*/*'
 jobs:
   build:
     runs-on: ubuntu-latest
