--- a/.github/workflows/paste_deployer.yml
+++ b/.github/workflows/paste_deployer.yml
@@ -10,6 +10,11 @@ on:
       - 'paste/*/*/*'
       - 'paste/*/*/*/*'
       - 'paste/*/*/*/*/*'
+      - 'shared/*'
+      - 'shared/*/*'
+      - 'shared/*/*/*'
+      - 'shared/*/*/*/*'
+      - 'shared/*/*/*/*/*'
 jobs:
   build:
     runs-on: ubuntu-latest
