--- a/paste/package.json
+++ b/paste/package.json
@@ -25,6 +25,7 @@
         "babel-loader": "^8.0.6",
         "babel-preset-react-app": "^9.0.2",
         "cross-env": "^6.0.0",
+        "next-images": "^1.2.0",
         "serverless-nextjs-plugin": "^2.3.8",
         "serverless-offline": "^5.11.0",
         "tsconfig-paths-webpack-plugin": "^3.2.0"
