--- a/builds/package.json
+++ b/builds/package.json
@@ -28,7 +28,8 @@
         "cross-env": "^7.0.0",
         "serverless-nextjs-plugin": "^2.4.4",
         "serverless-offline": "^5.12.1",
-        "tsconfig-paths-webpack-plugin": "^3.2.0"
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
+        "typescript": "^3.7.5"
     },
     "keywords": [
         "nextjs",
