--- a/main-site/package.json
+++ b/main-site/package.json
@@ -9,6 +9,7 @@
         "@emotion/styled": "^10.0.27",
         "gatsby": "^2.23.3",
         "gatsby-image": "^2.4.7",
+        "gatsby-plugin-remove-serviceworker": "^1.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -17,11 +18,10 @@
         "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
-        "@types/react": "^16.9.36",
+        "@types/react": "^16.9.37",
         "@types/react-helmet": "^6.0.0",
         "gatsby-plugin-google-gtag": "^2.1.4",
         "gatsby-plugin-manifest": "^2.4.11",
-        "gatsby-plugin-offline": "^3.2.9",
         "gatsby-plugin-react-helmet": "^3.3.4",
         "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
         "gatsby-plugin-robots-txt": "^1.5.1",
@@ -30,7 +30,7 @@
         "gatsby-plugin-typescript": "^2.4.6",
         "gatsby-source-filesystem": "^2.3.11",
         "gatsby-transformer-sharp": "^2.5.5",
-        "lint-staged": "^10.2.10",
+        "lint-staged": "^10.2.11",
         "prettier": "^2.0.5",
         "tsconfig": "^7.0.0",
         "tsconfig-paths": "^3.9.0",
