--- a/main-site/package.json
+++ b/main-site/package.json
@@ -7,10 +7,12 @@
     "dependencies": {
         "@emotion/core": "^10.0.28",
         "@emotion/styled": "^10.0.27",
+        "@svgr/webpack": "^5.4.0",
         "gatsby": "^2.23.7",
         "gatsby-image": "^2.4.7",
         "gatsby-plugin-google-analytics": "^2.3.4",
         "gatsby-plugin-remove-serviceworker": "^1.0.0",
+        "gatsby-plugin-svgr": "^2.0.2",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
