--- a/main-site/package.json
+++ b/main-site/package.json
@@ -5,8 +5,6 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.0.35",
-        "@emotion/styled": "^10.0.27",
         "@svgr/webpack": "^5.4.0",
         "gatsby": "^2.24.52",
         "gatsby-image": "^2.4.16",
@@ -17,17 +15,20 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
-        "smooth-scroll": "^16.1.3"
+        "smooth-scroll": "^16.1.3",
+        "styled-components": "^5.1.1"
     },
     "devDependencies": {
         "@types/react": "^16.9.48",
         "@types/react-helmet": "^6.1.0",
+        "@types/styled-components": "^5.1.2",
         "gatsby-plugin-manifest": "^2.4.26",
         "gatsby-plugin-react-helmet": "^3.3.10",
         "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
         "gatsby-plugin-robots-txt": "^1.5.1",
         "gatsby-plugin-sharp": "^2.6.30",
         "gatsby-plugin-sitemap": "^2.4.12",
+        "gatsby-plugin-styled-components": "^3.3.10",
         "gatsby-plugin-typescript": "^2.4.18",
         "gatsby-source-filesystem": "^2.3.27",
         "gatsby-transformer-sharp": "^2.5.13",
