--- a/paste/package.json
+++ b/paste/package.json
@@ -5,8 +5,6 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.0.35",
-        "@emotion/styled": "^10.0.27",
         "axios": "^0.20.0",
         "next": "^9.5.2",
         "next-images": "^1.4.1",
@@ -14,13 +12,15 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
-        "shortid": "^2.2.15"
+        "shortid": "^2.2.15",
+        "styled-components": "^5.1.1"
     },
     "devDependencies": {
         "@types/node": "^14.6.2",
         "@types/react": "^16.9.48",
         "@types/react-dom": "^16.9.8",
         "@types/shortid": "^0.0.29",
+        "@types/styled-components": "^5.1.2",
         "aws-sdk": "^2.742.0",
         "babel-loader": "^8.1.0",
         "babel-preset-react-app": "^9.1.2",
