--- a/builds/package.json
+++ b/builds/package.json
@@ -5,6 +5,8 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
+        "@emotion/core": "^10.0.35",
+        "@emotion/styled": "^10.0.27",
         "@fortawesome/fontawesome-svg-core": "^1.2.30",
         "@fortawesome/free-solid-svg-icons": "^5.14.0",
         "@fortawesome/react-fontawesome": "^0.1.11",
@@ -15,14 +17,12 @@
         "next-server": "^9.0.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-helmet": "^6.1.0",
-        "styled-components": "^5.1.1"
+        "react-helmet": "^6.1.0"
     },
     "devDependencies": {
         "@types/node": "^14.6.2",
         "@types/react": "^16.9.48",
         "@types/react-dom": "^16.9.8",
-        "@types/styled-components": "^5.1.2",
         "babel-loader": "^8.1.0",
         "babel-preset-react-app": "^9.1.2",
         "cross-env": "^7.0.2",
