--- a/main-site/package.json
+++ b/main-site/package.json
@@ -11,7 +11,6 @@
         "gatsby": "^2.24.57",
         "gatsby-image": "^2.4.17",
         "gatsby-plugin-google-analytics": "^2.3.13",
-        "gatsby-plugin-remove-serviceworker": "^1.0.0",
         "gatsby-plugin-svgr": "^2.0.2",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
@@ -23,6 +22,7 @@
         "@types/react": "^16.9.49",
         "@types/react-helmet": "^6.1.0",
         "gatsby-plugin-manifest": "^2.4.28",
+        "gatsby-plugin-netlify": "^2.3.14",
         "gatsby-plugin-react-helmet": "^3.3.10",
         "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
         "gatsby-plugin-robots-txt": "^1.5.1",
