Try forcing it to not use 16.8.0

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     },
     "scripts": {
         "postinstall": "patch-package"
+    },
+    "resolutions": {
+        "react": "^17.0.1"
     }
 }
