--- a/paste/package.json
+++ b/paste/package.json
@@ -7,10 +7,12 @@
     "dependencies": {
         "@emotion/core": "^10.0.35",
         "@emotion/styled": "^10.0.27",
+        "@google-cloud/storage": "^5.4.0",
         "axios": "^0.21.0",
         "next": "^10.0.0",
         "next-images": "^1.6.2",
         "next-server": "^9.0.5",
+        "next-transpile-modules": "^4.1.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
@@ -21,12 +23,9 @@
         "@types/react": "^16.9.55",
         "@types/react-dom": "^16.9.9",
         "@types/shortid": "^0.0.29",
-        "aws-sdk": "^2.781.0",
         "babel-loader": "^8.1.0",
         "babel-preset-react-app": "^10.0.0",
         "cross-env": "^7.0.2",
-        "serverless-nextjs-plugin": "^2.5.1",
-        "serverless-offline": "^6.8.0",
         "tsconfig-paths-webpack-plugin": "^3.3.0"
     },
     "keywords": [
@@ -39,8 +38,8 @@
     "scripts": {
         "dev": "next",
         "build": "next build",
-        "deploy": "cross-env NODE_ENV=production sls deploy -v",
-        "start": "next start",
+        "deploy": "gcloud app deploy --promote --stop-previous-version",
+        "start": "next start -p $PORT",
         "type-check": "tsc --project ./tsconfig.json --noEmit",
         "lint": "tslint --config ./tslint.json --project ./tsconfig.json",
         "lint:fix": "tslint --config ./tslint.json --project ./tsconfig.json --fix"
