Update GAE setup to support caching and basic ISR

--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ typings/
 
 # gatsby files
 .cache/
-public
+main-site/public
 
 # Mac files
 .DS_Store
@@ -74,5 +74,6 @@ sls-next-build
 
 # Next
 .next
+build
 # Local Netlify folder
 .netlify
