--- a/builds/package.json
+++ b/builds/package.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.0.35",
+        "@emotion/core": "^10.1.1",
         "@emotion/styled": "^10.0.27",
         "@fortawesome/fontawesome-svg-core": "^1.2.32",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -13,7 +13,7 @@
         "@google-cloud/storage": "^5.4.0",
         "axios": "^0.21.0",
         "moment": "^2.29.1",
-        "next": "^10.0.0",
+        "next": "^10.0.1",
         "next-images": "^1.6.2",
         "next-server": "^9.0.5",
         "next-transpile-modules": "^4.1.0",
@@ -23,7 +23,7 @@
     },
     "devDependencies": {
         "@types/node": "^14.14.6",
-        "@types/react": "^16.9.55",
+        "@types/react": "^16.9.56",
         "@types/react-dom": "^16.9.9",
         "babel-loader": "^8.1.0",
         "babel-preset-react-app": "^10.0.0",
@@ -40,7 +40,7 @@
     ],
     "scripts": {
         "dev": "next",
-        "clean": "rm -rf .next",
+        "clean": "rm -rf build",
         "build": "next build",
         "deploy": "gcloud app deploy --promote --stop-previous-version",
         "start": "next start -p $PORT",
