--- a/paste/package.json
+++ b/paste/package.json
@@ -5,11 +5,11 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.0.35",
+        "@emotion/core": "^10.1.1",
         "@emotion/styled": "^10.0.27",
         "@google-cloud/storage": "^5.4.0",
         "axios": "^0.21.0",
-        "next": "^10.0.0",
+        "next": "^10.0.1",
         "next-images": "^1.6.2",
         "next-server": "^9.0.5",
         "next-transpile-modules": "^4.1.0",
@@ -20,7 +20,7 @@
     },
     "devDependencies": {
         "@types/node": "^14.14.6",
-        "@types/react": "^16.9.55",
+        "@types/react": "^16.9.56",
         "@types/react-dom": "^16.9.9",
         "@types/shortid": "^0.0.29",
         "babel-loader": "^8.1.0",
@@ -37,7 +37,7 @@
     ],
     "scripts": {
         "dev": "next",
-        "clean": "rm -rf .next",
+        "clean": "rm -rf build",
         "build": "next build",
         "deploy": "gcloud app deploy --promote --stop-previous-version",
         "start": "next start -p $PORT",
