chore(builds): migrate builds to gae (#25)
* chore(builds): migrate builds to gae

* Update GAE setup to support caching and basic ISR

--- a/builds/package.json
+++ b/builds/package.json
@@ -5,29 +5,29 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.0.35",
+        "@emotion/core": "^10.1.1",
         "@emotion/styled": "^10.0.27",
         "@fortawesome/fontawesome-svg-core": "^1.2.32",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
         "@fortawesome/react-fontawesome": "^0.1.12",
+        "@google-cloud/storage": "^5.4.0",
         "axios": "^0.21.0",
         "moment": "^2.29.1",
-        "next": "^10.0.0",
+        "next": "^10.0.1",
         "next-images": "^1.6.2",
         "next-server": "^9.0.5",
+        "next-transpile-modules": "^4.1.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0"
     },
     "devDependencies": {
         "@types/node": "^14.14.6",
-        "@types/react": "^16.9.55",
+        "@types/react": "^16.9.56",
         "@types/react-dom": "^16.9.9",
         "babel-loader": "^8.1.0",
         "babel-preset-react-app": "^10.0.0",
         "cross-env": "^7.0.2",
-        "serverless-nextjs-plugin": "^2.5.1",
-        "serverless-offline": "^6.8.0",
         "tsconfig-paths-webpack-plugin": "^3.3.0",
         "typescript": "^4.0.5"
     },
@@ -40,9 +40,10 @@
     ],
     "scripts": {
         "dev": "next",
+        "clean": "rm -rf build",
         "build": "next build",
-        "deploy": "cross-env NODE_ENV=production sls deploy -v",
-        "start": "next start",
+        "deploy": "gcloud app deploy --promote --stop-previous-version",
+        "start": "next start -p $PORT",
         "type-check": "tsc --project ./tsconfig.json --noEmit",
         "lint": "tslint --config ./tslint.json --project ./tsconfig.json",
         "lint:fix": "tslint --config ./tslint.json --project ./tsconfig.json --fix"
