--- a/builds/package.json
+++ b/builds/package.json
@@ -5,12 +5,11 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.1.1",
-        "@emotion/styled": "^10.0.27",
         "@fortawesome/fontawesome-svg-core": "^1.2.32",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
         "@fortawesome/react-fontawesome": "^0.1.12",
         "@google-cloud/storage": "^5.4.0",
+        "@types/styled-components": "^5.1.4",
         "axios": "^0.21.0",
         "moment": "^2.29.1",
         "next": "^10.0.1",
@@ -19,13 +18,15 @@
         "next-transpile-modules": "^4.1.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-helmet": "^6.1.0"
+        "react-helmet": "^6.1.0",
+        "styled-components": "^5.2.1"
     },
     "devDependencies": {
         "@types/node": "^14.14.7",
         "@types/react": "^16.9.56",
         "@types/react-dom": "^16.9.9",
         "babel-loader": "^8.1.0",
+        "babel-plugin-styled-components": "^1.11.1",
         "babel-preset-react-app": "^10.0.0",
         "cross-env": "^7.0.2",
         "tsconfig-paths-webpack-plugin": "^3.3.0",
