--- a/main-site/package.json
+++ b/main-site/package.json
@@ -5,18 +5,19 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.1.1",
-        "@emotion/styled": "^10.0.27",
         "@svgr/webpack": "^5.4.0",
+        "@types/styled-components": "^5.1.4",
         "gatsby": "^2.25.3",
         "gatsby-image": "^2.4.21",
         "gatsby-plugin-google-analytics": "^2.4.1",
+        "gatsby-plugin-styled-components": "^3.3.14",
         "gatsby-plugin-svgr": "^2.0.2",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
-        "smooth-scroll": "^16.1.3"
+        "smooth-scroll": "^16.1.3",
+        "styled-components": "^5.2.1"
     },
     "devDependencies": {
         "@types/react": "^16.9.56",
