--- a/paste/package.json
+++ b/paste/package.json
@@ -5,9 +5,8 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.1.1",
-        "@emotion/styled": "^10.0.27",
         "@google-cloud/storage": "^5.4.0",
+        "@types/styled-components": "^5.1.4",
         "axios": "^0.21.0",
         "next": "^10.0.1",
         "next-images": "^1.6.2",
@@ -16,7 +15,8 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
-        "shortid": "^2.2.16"
+        "shortid": "^2.2.16",
+        "styled-components": "^5.2.1"
     },
     "devDependencies": {
         "@types/node": "^14.14.7",
@@ -24,6 +24,7 @@
         "@types/react-dom": "^16.9.9",
         "@types/shortid": "^0.0.29",
         "babel-loader": "^8.1.0",
+        "babel-plugin-styled-components": "^1.11.1",
         "babel-preset-react-app": "^10.0.0",
         "cross-env": "^7.0.2",
         "tsconfig-paths-webpack-plugin": "^3.3.0"
