--- a/shared/package.json
+++ b/shared/package.json
@@ -5,11 +5,11 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@emotion/core": "^10.1.1",
-        "@emotion/styled": "^10.0.27",
+        "@types/styled-components": "^5.1.4",
         "polished": "^4.0.3",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "styled-components": "^5.2.1"
     },
     "devDependencies": {
         "@babel/core": "^7.12.3",
