--- a/golf/package.json
+++ b/golf/package.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
+        "@enginehub/shared": "1.0.0",
         "@enginehub/schematicwebviewer": "^2.2.4",
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -16,7 +17,6 @@
         "gzip-js": "^0.3.2",
         "jsonwebtoken": "^8.5.1",
         "next": "^11.0.1",
-        "next-server": "^9.0.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
@@ -40,7 +40,6 @@
         "cross-env": "^7.0.3",
         "serverless-nextjs-plugin": "^2.5.1",
         "serverless-offline": "^6.9.0",
-        "tsconfig-paths-webpack-plugin": "^3.5.1",
         "tslint": "^6.1.3",
         "tslint-react": "^5.0.0",
         "typescript": "^4.3.4"
