--- a/main-site/package.json
+++ b/main-site/package.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
+        "@enginehub/shared": "1.0.0",
         "@svgr/webpack": "^5.5.0",
         "@types/styled-components": "^5.1.10",
         "gatsby": "^3.8.0",
@@ -12,7 +13,6 @@
         "gatsby-plugin-image": "^1.8.0",
         "gatsby-plugin-styled-components": "^4.8.0",
         "gatsby-plugin-svgr": "^3.0.0-beta.0",
-        "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
@@ -34,8 +34,6 @@
         "lint-staged": "^11.0.0",
         "prettier": "^2.3.1",
         "tsconfig": "^7.0.0",
-        "tsconfig-paths": "^3.9.0",
-        "tsconfig-paths-webpack-plugin": "^3.5.1",
         "tslint": "^6.1.3",
         "tslint-react": "^5.0.0",
         "typescript": "^4.3.4"
