--- a/shared/package.json
+++ b/shared/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "shared",
+    "name": "@enginehub/shared",
     "private": true,
     "description": "Shared libs for the EngineHub sites",
     "version": "1.0.0",
     "author": "EngineHub",
-    "main": "index.js",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "dependencies": {
         "@types/styled-components": "^5.1.10",
         "polished": "^4.1.3",
@@ -17,14 +18,16 @@
         "@types/node": "^14.14.41",
         "@types/react": "^17.0.11",
         "@types/react-dom": "^17.0.8",
-        "babel-loader": "^8.2.2",
+        "declaration-bundler-webpack-plugin": "git://github.com/clipchamp/declaration-bundler-webpack-plugin",
         "lint-staged": "^11.0.0",
         "tsconfig": "^7.0.0",
-        "tsconfig-paths": "^3.9.0",
-        "tsconfig-paths-webpack-plugin": "^3.5.1",
         "tslint": "^6.1.3",
         "tslint-react": "^5.0.0",
-        "typescript": "^4.3.4"
+        "typescript": "^4.3.4",
+        "source-map-loader": "^3.0.0",
+        "ts-loader": "^9.2.3",
+        "webpack": "^5.40.0",
+        "webpack-cli": "^4.7.2"
     },
     "lint-staged": {
         "./**/*.{ts,tsx}": [
@@ -41,6 +44,7 @@
     "scripts": {
         "type-check": "tsc --project ./tsconfig.json --noEmit",
         "lint": "tslint --config ./tslint.json --project ./tsconfig.json",
-        "lint:fix": "tslint --config ./tslint.json --project ./tsconfig.json --fix"
+        "lint:fix": "tslint --config ./tslint.json --project ./tsconfig.json --fix",
+        "prepare": "npx webpack"
     }
 }
