--- a/builds/package.json
+++ b/builds/package.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
+        "@enginehub/shared": "1.0.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/react-fontawesome": "^0.1.14",
@@ -13,8 +14,6 @@
         "moment": "^2.29.1",
         "next": "^11.0.1",
         "next-images": "^1.8.1",
-        "next-server": "^9.0.5",
-        "next-transpile-modules": "4.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
@@ -24,11 +23,7 @@
         "@types/node": "^14.14.41",
         "@types/react": "^17.0.11",
         "@types/react-dom": "^17.0.8",
-        "babel-loader": "^8.2.2",
         "babel-plugin-styled-components": "^1.12.0",
-        "babel-preset-react-app": "^10.0.0",
-        "cross-env": "^7.0.3",
-        "tsconfig-paths-webpack-plugin": "^3.5.1",
         "typescript": "^4.3.4"
     },
     "keywords": [
@@ -42,7 +37,6 @@
         "dev": "next",
         "clean": "rm -rf build",
         "build": "next build",
-        "deploy": "gcloud app deploy --promote --stop-previous-version",
         "start": "next start -p $PORT",
         "type-check": "tsc --project ./tsconfig.json --noEmit",
         "lint": "tslint --config ./tslint.json --project ./tsconfig.json",
