chore: add support for decrypted secrets to paste

--- a/golf/tsconfig.json
+++ b/golf/tsconfig.json
@@ -16,7 +16,7 @@
   "include": [
     "pages/**/*",
     "src/**/*"
-  ],
+, "../shared/src/utils/encryptedSecrets.ts"  ],
   "exclude": [
     "node_modules"
   ]
