--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,10 +1,6 @@
 {
-    "*.{ts,tsx}": [
-        "prettier --parser typescript --write --config ./.prettierrc.json",
-        "tslint --project ./tsconfig.json --config ./tslint.json --fix",
-        "git add"
-    ],
-    "*.html": ["prettier --parser html --write --config ./.prettierrc.json", "git add"],
-    "*.css": ["prettier --parser css --write --config ./.prettierrc.json", "git add"],
-    "*.json": ["prettier --parser json --write --config ./.prettierrc.json", "git add"]
+    "*.{ts,tsx}": ["eslint --cache --config ./.eslintrc.js --fix"],
+    "*.html": ["prettier --parser html --write --config ./.prettierrc"],
+    "*.css": ["prettier --parser css --write --config ./.prettierrc"],
+    "*.json": ["prettier --parser json --write --config ./.prettierrc"]
 }
